# unit-agent

./: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json  rpc-client.js
.github/workflows/: cd.yml  ci.yml
docs/: README.md
docs/pydemo/: README.md  requirements.txt  sentence-hello-world.py  sentence-transformers.py
js-client/: README.md  package.json
src/: intelligence.rs  lib.rs
src/lsp/: mod.rs
src/rpc/: client.rs  mod.rs  notification.rs  request.rs  unit_rpc.rs
unit-lsp/: Cargo.toml  README.md  build.rs
unit-lsp/src/: intelligence.rs  lib.rs
unit-lsp/src/intelligence/: scope_resolution.rs
wasmedge-bundle/: Cargo.toml  README.md
