[package]
name = "unit-lsp"
version = "0.1.1"
edition = "2021"
default-run = "ulsp"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ulsp"

[dependencies]
# core
tantivy = { version = "0.19.1", features = ["mmap"] }
tokio = { version = "1.24.2", features = ["macros", "process", "rt", "rt-multi-thread", "io-std", "io-util", "sync", "fs"] }
futures = "0.3.25"
rayon = "1.6.1"
clap = { version = "4.1.4", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "registry"] }
color-eyre = "0.6.2"

# for debugging
console-subscriber = { version = "0.1.8", optional = true }
histogram = { version = "0.7.0", optional = true }

# error handling
anyhow = "1.0.68"
thiserror = "1.0.38"

# query parsing
pest = "2.5.4"
pest_derive = "2.5.4"

# code-nav
tree-sitter = "0.20.9"
tree-sitter-c = "0.20.2"
tree-sitter-go = { git = "https://github.com/tree-sitter/tree-sitter-go", rev = "05900fa" }
tree-sitter-javascript = "0.20.0"
tree-sitter-python = "0.20.2"
tree-sitter-rust = "0.20.3"
tree-sitter-typescript = "0.20.2"
tree-sitter-c-sharp = "0.20.0"
tree-sitter-java = { git = "https://github.com/tree-sitter/tree-sitter-java", tag = "v0.20.0" }
tree-sitter-cpp = { git = "https://github.com/tree-sitter/tree-sitter-cpp", rev = "5ead1e2" }
petgraph = { version = "0.6.2", default-features = false, features = ["serde-1"] }

# webserver
serde = "1.0.152"
erased-serde = "0.3.25"

# webserver
serde_json = "1.0.91"
utoipa = { version = "2.4.2", features = ["axum_extras", "yaml"] }
axum = { version = "0.6.4", features = ["http2", "headers"] }
axum-extra = { version = "0.4.2", features = ["cookie", "cookie-private"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["auth", "cors", "catch-panic", "fs"] }

once_cell = "1.17.0"

# RPC Server
#jsonrpc-core = "18.0.0"
#jsonrpc-ipc-server = "15.0"
#jsonrpc-stdio-server = "15.0"
fern = "0.6.2"
xi-rpc = "0.3.0"
chrono = "0.4.24"
dirs = "5.0.1"

[build-dependencies]
phf_codegen = "0.11.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
blake3 = "1.3.3"

