[package]
name = "unit-lsp"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# error handling
anyhow = "1.0.68"
thiserror = "1.0.38"

# code-nav
tree-sitter = "0.20.9"
tree-sitter-c = "0.20.2"
tree-sitter-go = { git = "https://github.com/tree-sitter/tree-sitter-go", rev = "05900fa" }
tree-sitter-javascript = "0.20.0"
tree-sitter-python = "0.20.2"
tree-sitter-rust = "0.20.3"
tree-sitter-typescript = "0.20.2"
tree-sitter-c-sharp = "0.20.0"
tree-sitter-java = { git = "https://github.com/tree-sitter/tree-sitter-java", tag = "v0.20.0" }
tree-sitter-cpp = { git = "https://github.com/tree-sitter/tree-sitter-cpp", rev = "5ead1e2" }
petgraph = { version = "0.6.2", default-features = false, features = ["serde-1"] }

# webserver
serde = "1.0.152"
serde_json = "1.0.91"


[build-dependencies]
phf_codegen = "0.11.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
blake3 = "1.3.3"

