[package]
name = "wasmedge-bundle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0.30"
wasmedge-macro = "0.3.0"
wasmedge-sys = "0.12.2"
wasmedge-types = "0.3.1"
wat = "1.0"
wasmedge-sdk = "0.7.1"

[dev-dependencies]
tokio = {version = "1", features = ["full"]}

